[package]
name = "quanto_pricer"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16.0"
rustfft = "6.2.0"
num-complex = "0.4.6"
roots = "0.0.8"
statrs = "0.17.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }